fix: Status selector aligns with date input fields now

--- a/src/ui/EditTask.scss
+++ b/src/ui/EditTask.scss
@@ -113,6 +113,11 @@
         grid-column-start: 1;
         grid-column-end: 3;
     }
+
+    select {
+        grid-column: 2;
+        width: 15em;
+    }
 }
 
 .tasks-modal-status {
